Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9900

Text element does not load image tag

    XMLWordPrintable

Details

    Description

      Using a text element with an img tag does not load the image.

      import Qt 4.6
      
      Rectangle {
          width: 400; height: 400
          Text {
              anchors.fill: parent
              text: "here's an image: <img src='http://qt.nokia.com/logo.png'>. Can you see it?"
          }
      }
      

      also, images that do work (local files) are not resolved correctly (relative to CWD not component URL).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              wallison Warwick Allison (closed Nokia identity) (Inactive)
              hhartz Henrik Hartz (closed Nokia identity) (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes