Correctly resolve, and load, IMG tags in Text element.

Task-number: QTBUG-9900

Reviewed-by: Martin Jones