src/declarative/graphicsitems/qdeclarativetext.cpp
@@ -43,6 +43,7 @@
 #include "private/qdeclarativetext_p_p.h"
 #include <qdeclarativestyledtext_p.h>
 #include <qdeclarativeinfo.h>
+#include <qdeclarativepixmapcache_p.h>
 
 #include <QTextLayout>
 #include <QTextLine>
@@ -54,6 +55,50 @@
 #include <qmath.h>
 
 QT_BEGIN_NAMESPACE
+
+class QTextDocumentWithImageResources : public QTextDocument {
+    Q_OBJECT
+
+public:
+    QTextDocumentWithImageResources(QDeclarativeText *parent) :
+        QTextDocument(parent),
+        outstanding(0)
+    {
+    }
+
+    int resourcesLoading() const { return outstanding; }
+
+protected:
+    QVariant loadResource(int type, const QUrl &name)
+    {
+        QUrl url = qmlContext(parent())->resolvedUrl(name);
+
+        if (type == QTextDocument::ImageResource) {
+            QPixmap pm;
+            QDeclarativePixmapReply::Status status = QDeclarativePixmapCache::get(url, &pm, 0, true, 0, 0);
+            if (status == QDeclarativePixmapReply::Ready)
+                return pm;
+            if (status != QDeclarativePixmapReply::Error) {
+                QDeclarativePixmapReply *reply = QDeclarativePixmapCache::request(qmlEngine(parent()), url);
+                connect(reply, SIGNAL(finished()), this, SLOT(requestFinished()));
+                outstanding++;
+                static_cast<QDeclarativeText*>(parent())->reloadWithResources();
+            }
+        }
+
+        return QTextDocument::loadResource(type,url); // The *resolved* URL
+    }
+
+private slots:
+    void requestFinished()
+    {
+        outstanding--;
+        static_cast<QDeclarativeText*>(parent())->reloadWithResources();
+    }
+
+private:
+    int outstanding;
+};
 
 /*!
     \qmlclass Text QDeclarativeText
@@ -76,6 +121,9 @@ QT_BEGIN_NAMESPACE
 
     The \c elide property can alternatively be used to fit a single line of
     plain text to a set width.
+
+    Note that the \l{Supported HTML Subset} is limited, and that if IMG tags
+    load remote images, the text reloads (see resourcesLoading).
 
     Text provides read-only text. For editable text, see \l TextEdit.
 */
@@ -259,11 +307,10 @@ void QDeclarativeText::setText(const QString &n)
 
     d->richText = d->format == RichText || (d->format == AutoText && Qt::mightBeRichText(n));
     if (d->richText) {
-        if (!d->doc) {
-            d->doc = new QTextDocument(this);
-            d->doc->setDocumentMargin(0);
+        if (isComponentComplete()) {
+            d->ensureDoc();
+            d->doc->setHtml(n);
         }
-        d->doc->setHtml(n);
     }
 
     d->text = n;
@@ -550,11 +597,10 @@ void QDeclarativeText::setTextFormat(TextFormat format)
         d->updateLayout();
         d->markImgDirty();
     } else if (!wasRich && d->richText) {
-        if (!d->doc) {
-            d->doc = new QTextDocument(this);
-            d->doc->setDocumentMargin(0);
+        if (isComponentComplete()) {
+            d->ensureDoc();
+            d->doc->setHtml(d->text);
         }
-        d->doc->setHtml(d->text);
         d->updateLayout();
         d->markImgDirty();
     }
@@ -898,6 +944,39 @@ void QDeclarativeTextPrivate::checkImgCache()
     imgDirty = false;
 }
 
+void QDeclarativeTextPrivate::ensureDoc()
+{
+    if (!doc) {
+        Q_Q(QDeclarativeText);
+        doc = new QTextDocumentWithImageResources(q);
+        doc->setDocumentMargin(0);
+    }
+}
+
+void QDeclarativeText::reloadWithResources()
+{
+    Q_D(QDeclarativeText);
+    if (!d->richText)
+        return;
+    if (resourcesLoading()!=0)
+        return;
+    emit resourcesLoadingChanged();
+    d->doc->setHtml(d->text);
+    d->updateLayout();
+    d->markImgDirty();
+}
+
+/*!
+    \qmlproperty int Text::resourcesLoading
+    This property is the number of resources (images) that are being loaded asynchronously.
+*/
+int QDeclarativeText::resourcesLoading() const
+{
+    Q_D(const QDeclarativeText);
+    return d->doc ? d->doc->resourcesLoading() : 0;
+}
+
+
 void QDeclarativeText::paint(QPainter *p, const QStyleOptionGraphicsItem *, QWidget *)
 {
     Q_D(QDeclarativeText);
@@ -1011,6 +1090,10 @@ void QDeclarativeText::componentComplete()
     Q_D(QDeclarativeText);
     QDeclarativeItem::componentComplete();
     if (d->dirty) {
+        if (d->richText) {
+            d->ensureDoc();
+            d->doc->setHtml(d->text);
+        }
         d->updateLayout();
         d->dirty = false;
     }
@@ -1061,4 +1144,7 @@ void QDeclarativeText::mouseReleaseEvent(QGraphicsSceneMouseEvent *event)
     if (!event->isAccepted())
         QDeclarativeItem::mouseReleaseEvent(event);
 }
+
 QT_END_NAMESPACE
+
+#include "qdeclarativetext.moc"
